# log_parser

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
logs/: input-file-10000.txt
src/log_parser/: parser.py
src/log_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_log_parser.py
