[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "log_parser"
version = "0.1.0"
description = "A utility for parsing network connection logs."
authors = [{name = "Shimasadat Hosseini", email = "shima.hosseini.ise@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"

[project.scripts]
log_parser = "main:main"
